[package]
name = "voxel-traversal"
version = "0.3.0"
authors = [
    "Francis Engelmann (Original C Code)",
    "Christian Steenkamp (Port to Rust, Additions)"
]
edition = "2021"
description = "Traverse through all voxels in a 3d space from a start position to an end position."
readme = "README.md"
repository = "https://github.com/ChrisTechs/voxel-traversal"
license = "MIT"
keywords = ["voxel", "traversal"]
